<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.Authenticate">


    <LinearLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
                android:layout_marginBottom="@dimen/project_card_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_register"/>

        <TextView
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/project_card_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

        <EditText
                android:inputType="textPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/input_name_hint"/>


        <TextView
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/project_card_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"/>

        <EditText
                android:inputType="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mobileNumber"
                android:hint="@string/mobile_number_hint"/>

        <TextView
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/project_card_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>

        <EditText
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email_input_hint"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify"
                android:id="@+id/submit"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>